small change in html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <title>Bookmark Reads</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://www.flaticon.com/svg/vstatic/svg/3534/3534033.svg?token=exp=1613139477~hmac=b2fe7a3e6a108713e93551310fe7cfb7"/>
   </head>
 
   <body>
